# sandtrace

./: .gitignore  .sandtraceignore  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  ci-cd.md  configuration.md  getting-started.md  introduction.md  policies.md  security.md
docs/src/commands/: audit.md  init.md  run.md  scan.md  watch.md
docs/src/rules/: custom-rules.md  detection-rules.md  watch-rules.md
examples/: composer_audit.toml  config.toml  npm_audit.toml  permissive.toml  pnpm_audit.toml  strict.toml
rules/: credential-access.yml  exfiltration.yml  supply-chain.yml
scripts/: update-npm-iocs.sh
src/: cli.rs  config.rs  error.rs  event.rs  init.rs  main.rs  process.rs  scan.rs  telemetry.rs
src/alert/: desktop.rs  mod.rs  stdout.rs  syslog.rs  webhook.rs
src/audit/: mod.rs  scanner.rs  shai_hulud.rs
src/audit/obfuscation/: advanced.rs  ai_toolchain.rs  encoding.rs  mod.rs  supply_chain.rs
src/output/: jsonl.rs  mod.rs  terminal.rs
src/policy/: mod.rs  parser.rs  rules.rs
src/rules/: builtin.rs  matcher.rs  mod.rs  schema.rs
src/sandbox/: capabilities.rs  landlock.rs  mod.rs  namespaces.rs  seccomp.rs
src/tracer/: decoder.rs  memory.rs  mod.rs  state.rs  syscalls.rs
src/tracer/arch/: aarch64.rs  mod.rs  x86_64.rs
src/watch/: handler.rs  mod.rs  monitor.rs
tests/: integration.rs
tests/fixtures/binaries/: Cargo.toml
