[package]
name = "sandtrace"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sandtrace Contributors"]
description = "A Rust-based malware sandbox tool with syscall tracing and filesystem restriction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/sandtrace"
keywords = ["sandbox", "security", "ptrace", "syscall", "malware"]
categories = ["command-line-utilities", "development-tools::debugging"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
nix = { version = "0.31", features = ["process", "signal", "ptrace", "user", "sched", "term", "uio", "mount"] }
landlock = "0.4"
seccompiler = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.2"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2"
capctl = "0.2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
log = "0.4"
env_logger = "0.11"
once_cell = "1.20"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "sandtrace"
path = "src/main.rs"
