[package]
name = "sandtrace"
version = "0.2.6"
edition = "2021"
rust-version = "1.75"
authors = ["Sandtrace Contributors"]
description = "A Rust-based malware sandbox tool with syscall tracing and filesystem restriction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sandtrace/sandtrace"
keywords = ["sandbox", "security", "ptrace", "syscall", "malware"]
categories = ["command-line-utilities", "development-tools::debugging"]

[features]
telemetry = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
nix = { version = "0.31", features = ["process", "signal", "ptrace", "user", "sched", "term", "uio", "mount"] }
landlock = "0.4"
seccompiler = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.2"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2"
capctl = "0.2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
log = "0.4"
env_logger = "0.11"
once_cell = "1.20"
ctrlc = "3.4"

# EDR: Watch mode (inotify / cross-platform file watching)
inotify = "0.11"
notify = "7"

# EDR: Async runtime for daemon
tokio = { version = "1", features = ["full"] }

# EDR: YAML rule engine
serde_yml = "0.0.12"
regex = "1"

# EDR: Process lineage from /proc
procfs = "0.17"

# EDR: Desktop notifications
notify-rust = "4"

# EDR: HTTP webhook dispatch
reqwest = { version = "0.12", features = ["json"], default-features = false }

# EDR: Daemon signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# EDR: Async trait support
async-trait = "0.1"

# EDR: Futures utilities (StreamExt for signal handling)
futures-util = "0.3"

# Scan: Parallel filesystem scanning (absorbed from sandworm)
rayon = "1.10"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "sandtrace"
path = "src/main.rs"
